--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "shinnn/filter-changelog-paths",
   "author": "Shinnosuke Watanabe (https://github.com/shinnn)",
   "scripts": {
-    "pretest": "eslint --fix --config @shinnn/node index.js test.js",
-    "test": "tap --coverage --reporter=spec test.js",
-    "test-only": "tap --reporter=spec test.js"
+    "pretest": "eslint --fix --format=codeframe index.js test.js",
+    "test": "tap --coverage test.js",
+    "test-only": "tap test.js"
   },
   "license": "MIT",
   "files": [
@@ -42,8 +42,11 @@
   },
   "devDependencies": {
     "@shinnn/eslint-config-node": "^3.0.0",
-    "eslint": "^3.4.0",
-    "nyc": "^8.1.0",
-    "tap": "^7.0.0"
+    "eslint": "^3.19.0",
+    "nyc": "^10.2.2",
+    "tap": "^10.3.2"
+  },
+  "eslintConfig": {
+    "extends": "@shinnn/node"
   }
 }
